--- a/src/components/common/listTable/index.less
+++ b/src/components/common/listTable/index.less
@@ -29,7 +29,6 @@
   padding-right: 1px;
   background-color: #153d5e;
   .leftFixedTable {
-    z-index: 10000;
     box-shadow: 6px 0 6px -4px rgba(0,0,0,.2);
   }
   .topFixedArea {
